remove package src