@@ -1,5 +1,3 @@
-package src;
-
 import java.util.ArrayList;
 
 public abstract class ConcreatePiece implements Piece
@@ -58,7 +56,7 @@ public abstract class ConcreatePiece implements Piece
     }
 
     public Position getFirstPosition() {
-        return this.movesHistory.getFirst();
+        return this.movesHistory.get(0);
     }
 
     public String getTitlePrefix() {
